# TimeWorker

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md
src/: main.cpp  main.h
src/cli/: TimeWorkerCli.cpp  TimeWorkerCli.h
src/core/: AbstractSerializer.cpp  AbstractSerializer.h  TaskSerializer.cpp  TaskSerializer.h
src/core/util/: DateConverter.cpp  DateConverter.h  SmartPointer.cpp  SmartPointer.h  StringHelper.cpp  StringHelper.h
src/data/: Task.cpp  Task.h
src/interface/: AbstractUserInterface.cpp  AbstractUserInterface.h
